Fix layout issue

--- a/prif-review/src/components/Report.module.scss
+++ b/prif-review/src/components/Report.module.scss
@@ -25,7 +25,7 @@
 }
 
 .header-image {
-  position: absolute;
+  position: absolute !important;
   top: 50%;
   left: 50%;
   right: 0;
